# IX-Deep-Space-Anomaly-Triage

./: .gitignore  README.md  pyproject.toml
docs/: anomaly_triage_engine.md  assurance_posture.md  blackbox_evidence_and_sync.md  data_contracts.md  fault_library.md  health_sentinel.md  line_confidence_engine.md  mission_scope.md  replay_harness.md  safe_action_gate.md  system_context.md  validation_metrics.md
scenarios/examples/: link_state_pointing_drift.json  timing_bias_growth.json
schemas/: scenario.schema.json
src/ix_dsat/: claims.py  cli.py  contracts.py  errors.py  faults.py  gate.py  init.py  ledger.py  line_confidence.py  main.py  metrics.py  replay.py  scenario.py  sentinel.py  sync_queue.py  triage.py  validation.py
tests/: test_claims.py  test_cli.py  test_faults.py  test_gate.py  test_ledger.py  test_line_confidence.py  test_metrics.py  test_replay.py  test_scenario.py  test_sentinel.py  test_sync_queue.py  test_triage.py  test_validation.py
